<?xml version="1.0"?>
<package>
  <name>robotic_car_simulator</name>
  <version>1.0.0</version>
  <description>
    Metapackage allowing easy installation of simulation components.
  </description>

  <buildtool_depend>catkin</buildtool_depend>
  
  <export>
    <metapackage/>
  </export>

</package>
